<resources>
    <string name="app_name">Aggrobuddy</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password" >Forgot Password?</string>
    <string name="register_yourself">Register yourself</string>
    <string name="preference_file_name">Aggrobuddy preferences</string>
</resources>